front-end/src/assets/base.css
/* color palette from <https://github.com/vuejs/theme> */
:root {
  --vt-c-white: #ffffff;
  --vt-c-white-soft: #f8f8f8;
  --vt-c-white-mute: #f2f2f2;

  --vt-c-black: #181818;
  --vt-c-black-soft: #222222;
  --vt-c-black-mute: #282828;

  --vt-c-indigo: #2c3e50;

  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);

  --vt-c-text-light-1: var(--vt-c-indigo);
  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
  --vt-c-text-dark-1: var(--vt-c-white);
  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
}

/* semantic color variables for this project */
:root {
  --color-background: var(--vt-c-white);
  --color-background-soft: var(--vt-c-white-soft);
  --color-background-mute: var(--vt-c-white-mute);
  --color-border: var(--vt-c-divider-light-2);
  --color-border-hover: var(--vt-c-divider-light-1);
  --color-heading: var(--vt-c-text-light-1);
  --color-text: var(--vt-c-text-light-1);
  --bg-gradient: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(216, 216, 216, 1) 100%);
  --section-gap: 160px;
  --color-background-header: var(--color-blue);
  --color-shadow: rgba(0, 0, 0, 0.1);
  --color-toggle: var(--color-acid-yellow);
  --color-toggle2: var(--color-acid-black);
}

/*Personal palette*/
:root {
  --color-acid-black: #0c1100;
  --color-acid-yellow: #cbff00;
  --color-orange: #ff5e5b;
  --color-grey: #d8d8d8;
  --color-blue: #b9c9dd;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-background: var(--vt-c-black);
    --color-background-soft: var(--vt-c-black-soft);
    --color-background-mute: var(--vt-c-black-mute);
    --color-border: var(--vt-c-divider-dark-2);
    --color-border-hover: var(--vt-c-divider-dark-1);
    --color-heading: var(--vt-c-text-dark-1);
    --color-text: var(--vt-c-text-dark-2);
    --bg-gradient: linear-gradient(
      135deg,
      var(--color-acid-black) 0%,
      #111 0%,
      var(--color-acid-yellow) 100%
    );
  }
}

.dark {
  --color-background: #56584f;
  --color-background-soft: var(--color-acid-black);
  --color-background-mute: rgba(22, 26, 3, 0.7);
  --color-border: rgba(203, 255, 0, 0.18);
  --color-border-hover: rgba(203, 255, 0, 0.28);
  --color-heading: var(--color-acid-yellow);
  --color-text: rgba(255, 255, 255, 0.95);
  --bg-gradient: linear-gradient(
    180deg,
    var(--color-acid-black) 0%,
    #111 65%,
    var(--color-acid-yellow) 100%
  );
  --color-background-header: transparent;
  --color-shadow: rgba(203, 255, 0, 0.2);
  --color-toggle: var(--color-acid-black);
  --color-toggle2: var(--color-acid-yellow);
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  font-weight: normal;
}

body {
  min-height: 100vh;
  color: var(--color-text);
  background: var(--bg-gradient);
  transition:
    color 0.5s,
    background 0.5s;
  line-height: 1.6;
  font-family:
    Inter,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Fira Sans',
    'Droid Sans',
    'Helvetica Neue',
    sans-serif;
  font-size: 15px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

